layout issue fixed

--- a/src/app/(main)/globals.css
+++ b/src/app/(main)/globals.css
@@ -20,7 +20,7 @@
 
 body{
   font-family: var(--font-poppins);
-   background: "radial-gradient(125% 125% at 50% 100%, #000000 40%, #350136 100%)",
+   
 }
 
 .fixed-nav {
